--- a/main.tex
+++ b/main.tex
@@ -12,7 +12,7 @@
 %% version 2003/12/01 or later.
 %%%%%%%%%%%%%%%%
 
-\documentclass[10pt,a4paper]{altacv}
+\documentclass[10pt,letterpaper]{altacv}
 
 %% AltaCV uses the fontawesome and academicon fonts
 %% and packages. 
