--- a/resume.tex
+++ b/resume.tex
@@ -75,11 +75,11 @@
 %% \cvsection title in the "main" bar.
 \cvsection[page1sidebar]{Experience}
 
-\cveventnew{Software Engineer}{Zorus Inc.}{Worked as one of three Software Engineers building a customer portal and corresponding “node” from the ground up. Worked in PHP using Slim, Javascript, Python, NGINX, MySQL and AWS.}{May 2017 -- August 2017}{Newtown, CT}
+\cveventnew{Zorus Inc.}{Software Engineer}{Worked as one of three Software Engineers building a customer portal and corresponding “node” from the ground up. Worked in PHP using Slim, Javascript, Python, NGINX, MySQL and AWS.}{May 2017 -- August 2017}{Newtown, CT}
 
 \cvsection{Education}
 
-{\faGraduationCap} \cvevent{B.S.\ in Software Engineering}{Rochester Institute of Technology}{2016 - 2021}{}
+\cvevent{Rochester Institute of Technology}{B.S. in Software Engineering}{2016 - 2021}{}
 
 \cvsection{Projects}
 
