Updated Resume with Changes

--- a/resume.tex
+++ b/resume.tex
@@ -75,7 +75,7 @@
 %% \cvsection title in the "main" bar.
 \cvsection[page1sidebar]{Experience}
 
-\cveventnew{Zorus Inc.}{Software Engineer}{Worked as one of three Software Engineers building a customer portal and corresponding “node” from the ground up. Worked in PHP using Slim, Javascript, Python, NGINX, MySQL and AWS.}{May 2017 -- August 2017}{Newtown, CT}
+\cveventnew{Zorus Inc.}{Software Engineer}{Worked in a three person team of Software Engineers building a customer portal and corresponding server from the ground up. Worked in PHP using Slim, Javascript, Python, NGINX, MySQL and AWS.}{May 2017 -- August 2017}{Newtown, CT}
 
 \cvsection{Education}
 
@@ -85,11 +85,11 @@
 
 \nocite{*}
 
-\cvproject{wasp}{github.com/devinmatte/wasp}{A command line utility for generating and managing web configuration files. Including the manifest.json, bower.json, package.json and composer.json. Built in python, and packaged for linux. Currently managing as a multiple contributor project.}
+\cvproject{wasp}{github.com/devinmatte/wasp}{A command line utility for generating and managing web configuration files. Including the manifest.json, bower.json, package.json and composer.json. Built in Python, and packaged for Linux. Currently managing as a multiple contributor project.}
 
 \divider
 
-\cvproject{Calendar Maker}{github.com/NHSTechTeam/Calendar-Maker}{A calendar generator built for the high school I attended. A php web app that generated a csv file for import into google calendar by students and faculty. I still build and maintain it.}
+\cvproject{Calendar Maker}{github.com/NHSTechTeam/Calendar-Maker}{A calendar generator built for the high school I attended. A PHP web app that generated a csv file for import into Google calendar by students and faculty. I still build and maintain it.}
 
 \divider
 
@@ -97,7 +97,7 @@
 
 \divider
 
-\cvproject{Coralite Woodworks LLC.}{github.com/CoraliteWoodworks/coralitewoodworks.com}{Created a company website for my family’s company using Flask and SQLalchemy and designed for optimal search engine performance.}
+\cvproject{Coralite Woodworks LLC.}{github.com/CoraliteWoodworks/coralitewoodworks.com}{Created and designed a website for Coralite Woodworks in Python using Flask and SQLAlchemy with a focus on search engine optimization.}
 
 \divider
 
