--- a/resume.tex
+++ b/resume.tex
@@ -93,7 +93,7 @@
 
 \divider
 
-\cvproject{Git-Challenge}{github.com/devinmatte/Git-Challenge}{Developed an app rank the contributions of all users in all repositories of a GitHub org. The application can be deployed, either manually or as a container with environment variables.}
+\cvproject{Git-Challenge}{github.com/devinmatte/Git-Challenge}{Developed an app to rank the contributions of all users in all repositories of a GitHub org. The application can be deployed, either manually or as a container with environment variables.}
 
 \divider
 
