Updated Skills Section

--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -29,6 +29,7 @@ Seeking a Summer/Fall Co-op for the 2018 Year
 \cvtag{Linux}
 \cvtag{PHP}
 \cvtag{Java}
+\cvtag{Javascript}
 \cvtag{MySQL}
 \cvtag{git}
 
@@ -36,15 +37,15 @@ Seeking a Summer/Fall Co-op for the 2018 Year
 
 \cvsubsection{Familiar}
 
-\cvtag{Javascript}
 \cvtag{C}
 \cvtag{Flask}
 \cvtag{SEO}
+\cvtag{NGINX}
 \cvtag{WebP}
 \cvtag{\LaTeX}
 \cvtag{Packaging (.deb)}
-\cvtag{NGINX}
 \cvtag{Bower}
+\cvtag{Ruby}
 \cvtag{grunt.js}
 
 \cvsection{Activities}
