--- a/resume.tex
+++ b/resume.tex
@@ -57,7 +57,7 @@
 \personalinfo{%
   % Not all of these are required!
   % You can add your own with \printinfo{symbol}{detail}
-  \email{devinmatte@mail.rit.edu}
+  \email{devin@devinmatte.com}
   \phone{(203) 470-1323}
   \homepage{devinmatte.com}
   \github{devinmatte}
