--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -1,58 +1,23 @@
 \cvsection{Objective}
 \begin{quote}
-Seeking a Summer/Fall Co-op for the 2018 Year
+Seeking a Position as a Resident Advisor
 \end{quote}
 
-% \cvsection{Passion}
+\cvsection{Awards/Honors}
 
-%\cvachievement{\faTrophy}{Courage I had}{to take a sinking ship and try to make it float}
+\cvachievement{\faLineChart}{Dean's List}{Spring 2017}
 
-%\divider
+\cvsection{Leadership}
 
-%\cvachievement{\faHeartbeat}{Persistence \& Loyalty}{I showed despite the hard moments and my willingness to stay with Yahoo after the acquisition}
+\cvevent{Computer Science House}{Ad-Hoc Insights Director}{August 2017 - Present}{}
 
-%\divider
+\cvevent{Computer Science House}{House Secretary}{August 2017 - Present}{}
 
-%\cvachievement{\faLineChart}{Google's Growth}{from a hundred thousand searches per day to over a billion}
+\cvevent{Newtown Technology Team}{Broadcast Director}{June 2015 - June 2016}{}
 
-%\divider
+\cvevent{Class of 2016 Council}{Secretary}{June 2015 - June 2016}{}
 
-%\cvachievement{\faFemale}{Inspiring women in tech}{Youngest CEO on Fortune's list of 50 most powerful women}
-
-\cvsection{Skills}
-
-\cvsubsection{Proficient}
-
-\cvtag{Python}
-\cvtag{HTML/CSS}
-\cvtag{Bash}
-\cvtag{Linux}
-\cvtag{PHP}
-\cvtag{Java}
-\cvtag{Javascript}
-\cvtag{MySQL}
-\cvtag{git}
-
-\smallskip
-
-\cvsubsection{Familiar}
-
-\cvtag{C}
-\cvtag{Flask}
-\cvtag{SEO}
-\cvtag{NGINX}
-\cvtag{WebP}
-\cvtag{\LaTeX}
-\cvtag{Packaging (.deb)}
-\cvtag{Bower}
-\cvtag{Ruby}
-\cvtag{grunt.js}
-
-\cvsection{Activities}
-
-\cvevent{Computer Science House}{Secretary \& Ad-Hoc Insights Director}{2016 - Present}{}
-
-\cvevent{Newtown Technology Team}{Vice President \& Broadcast Director}{2014 - 2016}{}
+\cvevent{Newtown Technology Team}{Vice President}{June 2014 - June 2015}{}
 
 \cvsection{Volunteer Service}
 
