--- a/resume.tex
+++ b/resume.tex
@@ -52,15 +52,14 @@
 
 \begin{document}
 \name{DEVIN MATTÉ}
-\tagline{Full-Stack Software Engineer}
+\tagline{Second Year Software Engineering Major}
 % Cropped to square from my github page
 \personalinfo{%
   % Not all of these are required!
   % You can add your own with \printinfo{symbol}{detail}
-  \email{devin@devinmatte.com}
+  \email{devinmatte@mail.rit.edu}
   \phone{(203) 470-1323}
   \homepage{devinmatte.com}
-  \github{devinmatte}
 %   \orcid{orcid.org/0000-0000-0000-0000} % Obviously making this up too
 }
 
@@ -75,36 +74,22 @@
 %% \cvsection title in the "main" bar.
 \cvsection[page1sidebar]{Experience}
 
-\cveventnew{Zorus Inc.}{Software Engineer}{Worked in a three person team of Software Engineers building a customer portal and corresponding server from the ground up. Worked in PHP using Slim, Javascript, Python, NGINX, MySQL and AWS.}{May 2017 -- August 2017}{Newtown, CT}
+\cveventnew{Zorus Inc.}{Software Engineer}{Worked in a three person team of Software Engineers building a customer portal and corresponding server from the ground up. Built the majority of the initial product.}{May 2017 -- August 2017}{Newtown, CT}
+
+\cveventnew{Classroom Technology Support}{AV Technician}{Works as a Audio/Video Technician responding to all university calls regarding immediate and persistant issues and works to provide immediate and long term fixes.}{August 2016 -- Present}{Rochester, NY}
+
+\cveventnew{Caraluzzi's Markets}{Supervisor}{Responsible for maintaining the front end and to represent the store while on shift. Responsible for watching, and training all front end employees and taking care of all closing and shift changing operations.}{November 2014 -- January 2017}{Newtown, CT}
+
+\cveventnew{Charter Communications}{Intern}{Interned in the Community Access Television division of Charter and completed the broadcast training program.}{February 2015 -- May 2015}{Newtown, CT}
 
 \cvsection{Education}
 
-\cvevent{Rochester Institute of Technology}{B.S. in Software Engineering}{2016 - 2021}{}
+\cvevent{Rochester Institute of Technology}{B.S. in Software Engineering}{2016 -- 2021}{}
 
-\cvsection{Projects}
+\cvsection{Activities}
 
-\nocite{*}
+\cvevent{Computer Science House}{Secretary \& Ad-Hoc Insights Director}{2016 -- Present}{}
 
-\cvproject{wasp}{github.com/devinmatte/wasp}{A command line utility for generating and managing web configuration files. Including the manifest.json, bower.json, package.json and composer.json. Built in Python, and packaged for Linux. Currently managing as a multiple contributor project.}
-
-\divider
-
-\cvproject{Calendar Maker}{github.com/NHSTechTeam/Calendar-Maker}{A calendar generator built for the high school I attended. A PHP web app that generated a csv file for import into Google calendar by students and faculty. I still build and maintain it.}
-
-\divider
-
-\cvproject{Git-Challenge}{github.com/devinmatte/Git-Challenge}{Developed an app to rank the contributions of all users in all repositories of a GitHub org. The application can be deployed, either manually or as a container with environment variables.}
-
-\divider
-
-\cvproject{Coralite Woodworks LLC.}{github.com/CoraliteWoodworks/coralitewoodworks.com}{Created and designed a website for Coralite Woodworks in Python using Flask and SQLAlchemy with a focus on search engine optimization.}
-
-\divider
-
-\cvproject{Equipment System}{github.com/NHSTechTeam/Equipment-System}{Created a Java program used to track equipment leaving and returning to a school organization. The program was written to familiarize myself with GUI interfaces and to overall learn Java.}
-
-% \cvsection{}{Volunteer}
-
-% \cvproject{Software Engineer}{Zorus Inc.}{Worked as one of three Software Engineers building a customer portal and corresponding “node” from the ground up. Worked in PHP using Slim, Javascript, Python, NGINX, MySQL and AWS.}
+\cvevent{Newtown Technology Team}{Vice President \& Broadcast Director}{2014 -- 2016}{}
 
 \end{document}
