Updated co-op objective

--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -1,6 +1,6 @@
 \cvsection{Objective}
 \begin{quote}
-Seeking a Summer/Fall Co-op for the 2018 Year
+Seeking a Fall 2018 or Spring/Summer 2019 Co-op
 \end{quote}
 
 % \cvsection{Passion}
