Updated Resume and Cover Letter

--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -9,9 +9,11 @@ Seeking a Position as a Resident Advisor
 
 \cvsection{Leadership}
 
+\cvevent{Computer Science House}{Financial Director}{January 2018 - Present}{}
+
 \cvevent{Computer Science House}{Ad-Hoc Insights Director}{August 2017 - Present}{}
 
-\cvevent{Computer Science House}{House Secretary}{August 2017 - Present}{}
+\cvevent{Computer Science House}{House Secretary}{August 2017 - January 2018}{}
 
 \cvevent{Newtown Technology Team}{Broadcast Director}{June 2015 - June 2016}{}
 
