--- a/resume.tex
+++ b/resume.tex
@@ -88,7 +88,7 @@
 
 \cvsection{Activities}
 
-\cvevent{Computer Science House}{Secretary \& Ad-Hoc Insights Director}{2016 -- Present}{}
+\cvevent{Computer Science House}{Financial Director, Ad-Hoc Insights Director \& Former Secretary}{2016 -- Present}{}
 
 \cvevent{Newtown Technology Team}{Vice President \& Broadcast Director}{2014 -- 2016}{}
 
