Update Skills and CSH

--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -46,11 +46,12 @@ Seeking a Fall 2018 or Spring/Summer 2019 Co-op
 \cvtag{Packaging (.deb)}
 \cvtag{Bower}
 \cvtag{Ruby}
+\cvtag{React}
 \cvtag{grunt.js}
 
 \cvsection{Activities}
 
-\cvevent{Computer Science House}{Secretary \& Ad-Hoc Insights Director}{2016 - Present}{}
+\cvevent{Computer Science House}{Financial Director, Ad-Hoc Insights Director \& Secretary}{2016 - Present}{}
 
 \cvevent{Newtown Technology Team}{Vice President \& Broadcast Director}{2014 - 2016}{}
 
