Updating with links and new projects

--- a/altacv.cls
+++ b/altacv.cls
@@ -36,6 +36,7 @@
 \RequirePackage{dashrule}
 \RequirePackage{multirow,tabularx}
 \RequirePackage{changepage}
+\RequirePackage{hyperref}
 % \RequirePackage{marginfix}
 
 \setlength{\parindent}{0pt}
