--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -32,13 +32,13 @@ Seeking a Fall 2018 or Spring/Summer 2019 Co-op
 \cvtag{Javascript}
 \cvtag{MySQL}
 \cvtag{git}
+\cvtag{Flask}
 
 \smallskip
 
 \cvsubsection{Familiar}
 
 \cvtag{C}
-\cvtag{Flask}
 \cvtag{SEO}
 \cvtag{NGINX}
 \cvtag{WebP}
@@ -46,14 +46,22 @@ Seeking a Fall 2018 or Spring/Summer 2019 Co-op
 \cvtag{Packaging (.deb)}
 \cvtag{Bower}
 \cvtag{Ruby}
+\cvtag{Doctrine}
 \cvtag{React}
 \cvtag{grunt.js}
+\cvtag{EC2}
 
 \cvsection{Activities}
 
-\cvevent{Computer Science House}{Financial Director, Ad-Hoc Insights Director \& Secretary}{2016 - Present}{}
+\cvevent{\href{https://csh.rit.edu/}{Computer Science House}}{Financial Director}{January 2018 - Present}{}
 
-\cvevent{Newtown Technology Team}{Vice President \& Broadcast Director}{2014 - 2016}{}
+\cvevent{\href{https://csh.rit.edu/}{Computer Science House}}{Ad-Hoc Insights Director}{August 2017 - Present}{}
+
+\cvevent{\href{https://csh.rit.edu/}{Computer Science House}}{Secretary}{August 2017 - January 2018}{}
+
+\cvevent{\href{http://nhstech.us/}{Newtown Technology Team}}{Broadcast Director}{June 2015 - June 2016}{}
+
+\cvevent{\href{http://nhstech.us/}{Newtown Technology Team}}{Vice President}{June 2014 - June 2015}{}
 
 \cvsection{Volunteer Service}
 
