--- a/resume.tex
+++ b/resume.tex
@@ -59,8 +59,8 @@
   % You can add your own with \printinfo{symbol}{detail}
   \email{devin@devinmatte.com}
   \phone{(203) 470-1323}
-  \homepage{devinmatte.com}
-  \github{devinmatte}
+  \homepage{\href{https://devinmatte.com}{devinmatte.com}}
+  \github{\href{https://github.com/devinmatte}{devinmatte}}
 %   \orcid{orcid.org/0000-0000-0000-0000} % Obviously making this up too
 }
 
@@ -85,24 +85,31 @@
 
 \nocite{*}
 
-\cvproject{wasp}{github.com/devinmatte/wasp}{A command line utility for generating and managing web configuration files. Including the manifest.json, bower.json, package.json and composer.json. Built in Python, and packaged for Linux. Currently managing as a multiple contributor project.}
+\cvproject{WebDrink Server}{\href{https://github.com/ComputerScienceHouse/WebDrink-API}{github.com/ComputerScienceHouse/WebDrink-API}}{WebDrink is Computer Science Houses web interface for interacting with our web connected vending machines. I rewrote the entire communication between the Client and the Machines by creating a RESTful API using PHP, Slim, and Doctrine.}
 
 \divider
 
-\cvproject{Calendar Maker}{github.com/NHSTechTeam/Calendar-Maker}{A calendar generator built for the high school I attended. A PHP web app that generated a csv file for import into Google calendar by students and faculty. I still build and maintain it.}
+\cvproject{AWS Wrapper}{\href{https://github.com/SquashProjectTwo/AWS-Wrapper}{github.com/SquashProjectTwo/AWS-Wrapper}}{Created at Brickhack4, a web application that created a new UI interface for AWS, specifically EC2 by using Boto3 to immitate all the functions provided by EC2 in their current web interface. Won best use of AWS at the event.}
 
 \divider
 
-\cvproject{Git-Challenge}{github.com/devinmatte/Git-Challenge}{Developed an app to rank the contributions of all users in all repositories of a GitHub org. The application can be deployed, either manually or as a container with environment variables.}
+\cvproject{wasp}{\href{https://github.com/devinmatte/wasp}{github.com/devinmatte/wasp}}{A command line utility for generating and managing web configuration files. Including the manifest.json, bower.json, package.json and composer.json. Built in Python, and packaged for Linux. Currently managing as a multiple contributor project.}
 
 \divider
 
-\cvproject{Coralite Woodworks LLC.}{github.com/CoraliteWoodworks/coralitewoodworks.com}{Created and designed a website for Coralite Woodworks in Python using Flask and SQLAlchemy with a focus on search engine optimization.}
+\cvproject{Calendar Maker}{\href{https://github.com/NHSTechTeam/Calendar-Maker}{github.com/NHSTechTeam/Calendar-Maker}}{A calendar generator built for the high school I attended. A PHP web app that generated a csv file for import into Google calendar by students and faculty. I still build and maintain it.}
 
 \divider
 
-\cvproject{Equipment System}{github.com/NHSTechTeam/Equipment-System}{Created a Java program used to track equipment leaving and returning to a school organization. The program was written to familiarize myself with GUI interfaces and to overall learn Java.}
+\cvproject{Git-Challenge}{\href{https://github.com/devinmatte/Git-Challenge}{github.com/devinmatte/Git-Challenge}}{Developed an app to rank the contributions of all users in all repositories of a GitHub org. The application can be deployed, either manually or as a container with environment variables.}
 
+\divider
+
+\cvproject{Coralite Woodworks LLC.}{\href{https://github.com/CoraliteWoodworks/coralitewoodworks.com}{github.com/CoraliteWoodworks/coralitewoodworks.com}}{Created and designed a website for Coralite Woodworks in Python using Flask and SQLAlchemy with a focus on search engine optimization.}
+
+\divider
+
+For more projects, visit \href{https://devinmatte.com}{devinmatte.com}
 % \cvsection{}{Volunteer}
 
 % \cvproject{Software Engineer}{Zorus Inc.}{Worked as one of three Software Engineers building a customer portal and corresponding “node” from the ground up. Worked in PHP using Slim, Javascript, Python, NGINX, MySQL and AWS.}
