Cleaning up from feedback

--- a/resume.tex
+++ b/resume.tex
@@ -75,11 +75,11 @@
 %% \cvsection title in the "main" bar.
 \cvsection[page1sidebar]{Experience}
 
-\cveventnew{Zorus Inc.}{Software Engineer}{Worked in a three person team of Software Engineers building a customer portal and corresponding server from the ground up. Worked in PHP using Slim, Javascript, Python, NGINX, MySQL and AWS.}{May 2017 -- August 2017}{Newtown, CT}
+\cveventnew{\href{http://zorustech.com/}{Zorus Inc.}}{Software Engineer}{Worked in a three person team of Software Engineers building a customer portal and corresponding server from the ground up. Worked in PHP using Slim, Javascript, Python, NGINX, MySQL and AWS.}{May 2017 -- August 2017}{Newtown, CT}
 
 \cvsection{Education}
 
-\cvevent{Rochester Institute of Technology}{B.S. in Software Engineering}{2016 - 2021}{}
+\cvevent{Rochester Institute of Technology}{B.S. in Software Engineering: 3.0 GPA}{2016 - 2021}{}
 
 \cvsection{Projects}
 
@@ -107,9 +107,6 @@
 
 \cvproject{Coralite Woodworks LLC.}{\href{https://github.com/CoraliteWoodworks/coralitewoodworks.com}{github.com/CoraliteWoodworks/coralitewoodworks.com}}{Created and designed a website for Coralite Woodworks in Python using Flask and SQLAlchemy with a focus on search engine optimization.}
 
-\divider
-
-For more projects, visit \href{https://devinmatte.com}{devinmatte.com}
 % \cvsection{}{Volunteer}
 
 % \cvproject{Software Engineer}{Zorus Inc.}{Worked as one of three Software Engineers building a customer portal and corresponding “node” from the ground up. Worked in PHP using Slim, Javascript, Python, NGINX, MySQL and AWS.}
