Added new skills

--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -43,12 +43,13 @@ Seeking a Fall 2018 or Spring/Summer 2019 Co-op
 \cvtag{NGINX}
 \cvtag{WebP}
 \cvtag{\LaTeX}
-\cvtag{Packaging (.deb)}
 \cvtag{Bower}
 \cvtag{Ruby}
 \cvtag{Doctrine}
 \cvtag{React}
 \cvtag{grunt.js}
+\cvtag{gulp.js}
+\cvtag{docker}
 \cvtag{EC2}
 
 \cvsection{Activities}
