Updating Co-op Statement

--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -1,6 +1,6 @@
 \cvsection{Objective}
 \begin{quote}
-Seeking a Fall 2018 or Spring/Summer 2019 Co-op
+Seeking a Spring/Summer 2019 Co-op
 \end{quote}
 
 % \cvsection{Passion}
