Updated Resume with Datto

--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -25,14 +25,23 @@ Seeking a Spring/Summer 2019 Co-op
 
 \cvtag{Python}
 \cvtag{HTML/CSS}
-\cvtag{Bash}
 \cvtag{Linux}
 \cvtag{PHP}
 \cvtag{Java}
-\cvtag{Javascript}
 \cvtag{MySQL}
 \cvtag{git}
 \cvtag{Flask}
+
+\smallskip
+
+\cvsubsection{Experienced}
+\cvtag{Javascript}
+\cvtag{NGINX}
+\cvtag{Bash}
+\cvtag{\LaTeX}
+\cvtag{Doctrine}
+\cvtag{Grunt}
+\cvtag{Gulp}
 
 \smallskip
 
@@ -40,21 +49,18 @@ Seeking a Spring/Summer 2019 Co-op
 
 \cvtag{C}
 \cvtag{SEO}
-\cvtag{NGINX}
 \cvtag{WebP}
-\cvtag{\LaTeX}
 \cvtag{Bower}
 \cvtag{Ruby}
-\cvtag{Doctrine}
 \cvtag{React}
-\cvtag{grunt.js}
-\cvtag{gulp.js}
 \cvtag{docker}
 \cvtag{EC2}
 
 \cvsection{Activities}
 
-\cvevent{\href{https://csh.rit.edu/}{Computer Science House}}{Financial Director}{January 2018 - Present}{}
+\cvevent{\href{https://csh.rit.edu/}{Computer Science House}}{Evlauations Director}{June 2018 - Present}{}
+
+\cvevent{\href{https://csh.rit.edu/}{Computer Science House}}{Financial Director}{January 2018 - June 2018}{}
 
 \cvevent{\href{https://csh.rit.edu/}{Computer Science House}}{Ad-Hoc Insights Director}{August 2017 - Present}{}
 
@@ -66,4 +72,3 @@ Seeking a Spring/Summer 2019 Co-op
 
 \cvevent{Ben’s Lighthouse}{Coding Mentor}{2015}{}
 
-\cvevent{Newtown Educational Access Television}{Film Editor}{2013 - 2016}{}
