--- a/resume.tex
+++ b/resume.tex
@@ -75,6 +75,8 @@
 %% \cvsection title in the "main" bar.
 \cvsection[page1sidebar]{Experience}
 
+\cveventnew{\href{http://datto.com/}{Datto Inc.}}{Software Engineering Intern}{Worked on the Admin Portal Team building the administrative portal for the company. Worked in PHP with Symfony, MySQL, Docker, and Ubuntu}{May 2018 -- August 2018}{Norwalk, CT}
+
 \cveventnew{\href{http://zorustech.com/}{Zorus Inc.}}{Software Engineer}{Worked in a three person team of Software Engineers building a customer portal and corresponding server from the ground up. Worked in PHP using Slim, Javascript, Python, NGINX, MySQL and AWS.}{May 2017 -- August 2017}{Newtown, CT}
 
 \cvsection{Education}
@@ -85,10 +87,6 @@
 
 \nocite{*}
 
-\cvproject{WebDrink Server}{\href{https://github.com/ComputerScienceHouse/WebDrink-API}{github.com/ComputerScienceHouse/WebDrink-API}}{WebDrink is Computer Science Houses web interface for interacting with our web connected vending machines. I rewrote the entire communication between the Client and the Machines by creating a RESTful API using PHP, Slim, and Doctrine.}
-
-\divider
-
 \cvproject{AWS Wrapper}{\href{https://github.com/SquashProjectTwo/AWS-Wrapper}{github.com/SquashProjectTwo/AWS-Wrapper}}{Created at Brickhack4, a web application that created a new UI interface for AWS, specifically EC2 by using Boto3 to immitate all the functions provided by EC2 in their current web interface. Won best use of AWS at the event.}
 
 \divider
@@ -98,10 +96,6 @@
 \divider
 
 \cvproject{Calendar Maker}{\href{https://github.com/NHSTechTeam/Calendar-Maker}{github.com/NHSTechTeam/Calendar-Maker}}{A calendar generator built for the high school I attended. A PHP web app that generated a csv file for import into Google calendar by students and faculty. I still build and maintain it.}
-
-\divider
-
-\cvproject{Git-Challenge}{\href{https://github.com/devinmatte/Git-Challenge}{github.com/devinmatte/Git-Challenge}}{Developed an app to rank the contributions of all users in all repositories of a GitHub org. The application can be deployed, either manually or as a container with environment variables.}
 
 \divider
 
