--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -42,6 +42,7 @@ Seeking a Spring/Summer 2019 Co-op
 \cvtag{Doctrine}
 \cvtag{Grunt}
 \cvtag{Gulp}
+\cvtag{Symfony}
 
 \smallskip
 
@@ -55,6 +56,7 @@ Seeking a Spring/Summer 2019 Co-op
 \cvtag{React}
 \cvtag{docker}
 \cvtag{EC2}
+\cvtag{GraphQL}
 
 \cvsection{Activities}
 
