--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -40,9 +40,11 @@ Seeking a Spring/Summer 2019 Co-op
 \cvtag{Bash}
 \cvtag{\LaTeX}
 \cvtag{Doctrine}
+\cvtag{WebP}
 \cvtag{Grunt}
 \cvtag{Gulp}
 \cvtag{Symfony}
+\cvtag{npm/yarn}
 
 \smallskip
 
@@ -50,13 +52,13 @@ Seeking a Spring/Summer 2019 Co-op
 
 \cvtag{C}
 \cvtag{SEO}
-\cvtag{WebP}
 \cvtag{Bower}
 \cvtag{Ruby}
 \cvtag{React}
 \cvtag{docker}
 \cvtag{EC2}
 \cvtag{GraphQL}
+\cvtag{Nodejs}
 
 \cvsection{Activities}
 
