--- a/resume.tex
+++ b/resume.tex
@@ -75,9 +75,9 @@
 %% \cvsection title in the "main" bar.
 \cvsection[page1sidebar]{Experience}
 
-\cveventnew{\href{http://datto.com/}{Datto Inc.}}{Software Engineering Intern}{Worked on the Admin Portal Team building the administrative portal for the company. Worked in PHP with Symfony, MySQL, Docker, and Ubuntu}{May 2018 -- August 2018}{Norwalk, CT}
+\cveventnew{\href{http://datto.com/}{Datto Inc.}}{Software Engineering Intern}{Worked on the Admin Portal Team building the administrative portal for the company. Worked in PHP with Symfony, Javascript, MySQL, Apache, Docker, and Ubuntu.}{May 2018 -- August 2018}{Norwalk, CT}
 
-\cveventnew{\href{http://zorustech.com/}{Zorus Inc.}}{Software Engineer}{Worked in a three person team of Software Engineers building a customer portal and corresponding server from the ground up. Worked in PHP using Slim, Javascript, Python, NGINX, MySQL and AWS.}{May 2017 -- August 2017}{Newtown, CT}
+\cveventnew{\href{http://zorustech.com/}{Zorus Inc.}}{Software Engineer}{Worked during startup stages as one of three engineers at the company. Built a customer portal and corresponding servers from the ground up. Worked in PHP using Slim, Javascript, Python, NGINX, MySQL and AWS.}{May 2017 -- August 2017}{Newtown, CT}
 
 \cvsection{Education}
 
@@ -91,11 +91,11 @@
 
 \divider
 
-\cvproject{wasp}{\href{https://github.com/devinmatte/wasp}{github.com/devinmatte/wasp}}{A command line utility for generating and managing web configuration files. Including the manifest.json, bower.json, package.json and composer.json. Built in Python, and packaged for Linux. Currently managing as a multiple contributor project.}
+\cvproject{Contrb}{\href{https://github.com/Contrb}{github.com/Contrb}}{A website built to display coding projects and open source contributions in a visually appealing manor. Built with a React frontend along with a Nodejs and GraphQL backend. The application utilizes GitHub Oauth, GitHub v4 API, with many more integrations planned.}
 
 \divider
 
-\cvproject{Calendar Maker}{\href{https://github.com/NHSTechTeam/Calendar-Maker}{github.com/NHSTechTeam/Calendar-Maker}}{A calendar generator built for the high school I attended. A PHP web app that generated a csv file for import into Google calendar by students and faculty. I still build and maintain it.}
+\cvproject{wasp}{\href{https://github.com/devinmatte/wasp}{github.com/devinmatte/wasp}}{A command line utility for generating and managing web configuration files. Including the manifest.json, bower.json, package.json and composer.json. Built in Python, and packaged for Linux. Currently managing as a multiple contributor project.}
 
 \divider
 
