--- a/resume.tex
+++ b/resume.tex
@@ -81,7 +81,7 @@
 
 \cvsection{Education}
 
-\cvevent{Rochester Institute of Technology}{B.S. in Software Engineering: 3.0 GPA}{2016 - 2021}{}
+\cvevent{Rochester Institute of Technology}{B.S. in Software Engineering}{2016 - 2021}{}
 
 \cvsection{Projects}
 
