Resume update and Cleanup

--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -24,13 +24,14 @@ Seeking a Spring/Summer 2019 Co-op
 \cvsubsection{Proficient}
 
 \cvtag{Python}
-\cvtag{HTML/CSS}
-\cvtag{Linux}
 \cvtag{PHP}
+\cvtag{SQL}
+\cvtag{Linux}
 \cvtag{Java}
-\cvtag{MySQL}
 \cvtag{git}
 \cvtag{Flask}
+\cvtag{HTML}
+\cvtag{CSS/Sass}
 
 \smallskip
 
@@ -39,12 +40,10 @@ Seeking a Spring/Summer 2019 Co-op
 \cvtag{NGINX}
 \cvtag{Bash}
 \cvtag{\LaTeX}
-\cvtag{Doctrine}
-\cvtag{WebP}
-\cvtag{Grunt}
-\cvtag{Gulp}
+\cvtag{Openshift}
+\cvtag{Gulp/Grunt}
 \cvtag{Symfony}
-\cvtag{npm/yarn}
+\cvtag{Docker}
 
 \smallskip
 
@@ -52,11 +51,8 @@ Seeking a Spring/Summer 2019 Co-op
 
 \cvtag{C}
 \cvtag{SEO}
-\cvtag{Bower}
-\cvtag{Ruby}
-\cvtag{React}
-\cvtag{docker}
 \cvtag{EC2}
+\cvtag{React}
 \cvtag{GraphQL}
 \cvtag{Nodejs}
 
