--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -58,7 +58,7 @@ Seeking a Spring/Summer 2019 Co-op
 
 \cvsection{Activities}
 
-\cvevent{\href{https://csh.rit.edu/}{Computer Science House}}{Evlauations Director}{June 2018 - Present}{}
+\cvevent{\href{https://csh.rit.edu/}{Computer Science House}}{Evaluations Director}{June 2018 - Present}{}
 
 \cvevent{\href{https://csh.rit.edu/}{Computer Science House}}{Financial Director}{January 2018 - June 2018}{}
 
