--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -58,13 +58,11 @@ Seeking a Spring/Summer 2019 Co-op
 
 \cvsection{Activities}
 
-\cvevent{\href{https://csh.rit.edu/}{Computer Science House}}{Evaluations Director}{June 2018 - Present}{}
-
-\cvevent{\href{https://csh.rit.edu/}{Computer Science House}}{Financial Director}{January 2018 - June 2018}{}
-
-\cvevent{\href{https://csh.rit.edu/}{Computer Science House}}{Ad-Hoc Insights Director}{August 2017 - Present}{}
-
-\cvevent{\href{https://csh.rit.edu/}{Computer Science House}}{Secretary}{August 2017 - January 2018}{}
+\cvevent{\href{https://csh.rit.edu/}{Computer Science House}}{System Administrator}{May 2018 - Present}{}
+\cvevent{}{Evaluations Director}{June 2018 - Present}{}
+\cvevent{}{Financial Director}{January 2018 - June 2018}{}
+\cvevent{}{Insights Director}{August 2017 - June 2018}{}
+\cvevent{}{Secretary}{August 2017 - January 2018}{}
 
 \cvevent{\href{http://nhstech.us/}{Newtown Technology Team}}{Vice President}{June 2014 - June 2015}{}
 
