--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -3,6 +3,10 @@
 Seeking a Spring/Summer 2019 Co-op
 \end{quote}
 
+\cvsection{Education}
+
+\cvevent{Rochester Institute of Technology}{B.S. in Software Engineering}{2016-2021}{}
+
 % \cvsection{Passion}
 
 %\cvachievement{\faTrophy}{Courage I had}{to take a sinking ship and try to make it float}
@@ -21,52 +25,43 @@ Seeking a Spring/Summer 2019 Co-op
 
 \cvsection{Skills}
 
-\cvsubsection{Proficient}
-
+\cvsubsection{Languages}
 \cvtag{Python}
 \cvtag{PHP}
 \cvtag{SQL}
-\cvtag{Linux}
 \cvtag{Java}
-\cvtag{git}
-\cvtag{Flask}
 \cvtag{HTML}
 \cvtag{CSS/Sass}
+\cvtag{Javascript}
+\cvtag{\LaTeX}
+\cvtag{C}
 
 \smallskip
 
-\cvsubsection{Experienced}
-\cvtag{Javascript}
+\cvsubsection{Tools}
+\cvtag{Linux}
+\cvtag{git}
+\cvtag{Flask}
+\cvtag{SQLAlchemy}
+\cvtag{MySQL}
 \cvtag{NGINX}
 \cvtag{Bash}
-\cvtag{\LaTeX}
 \cvtag{Openshift}
-\cvtag{Gulp/Grunt}
-\cvtag{Symfony}
 \cvtag{Docker}
-
-\smallskip
-
-\cvsubsection{Familiar}
-
-\cvtag{C}
-\cvtag{SEO}
+\cvtag{PostgreSQL}
+\cvtag{Symfony}
+\cvtag{OIDC}
+\cvtag{Gulp/Grunt}
 \cvtag{EC2}
+\cvtag{LDAP}
 \cvtag{React}
-\cvtag{GraphQL}
 \cvtag{Nodejs}
 
 \cvsection{Activities}
 
-\cvevent{\href{https://csh.rit.edu/}{Computer Science House}}{System Administrator}{May 2018 - Present}{}
-\cvevent{}{Evaluations Director}{June 2018 - Present}{}
-\cvevent{}{Financial Director}{January 2018 - June 2018}{}
-\cvevent{}{Insights Director}{August 2017 - June 2018}{}
-\cvevent{}{Secretary}{August 2017 - January 2018}{}
-
-\cvevent{\href{http://nhstech.us/}{Newtown Technology Team}}{Vice President}{June 2014 - June 2015}{}
-
-\cvsection{Volunteer Service}
-
-\cvevent{Ben’s Lighthouse}{Coding Mentor}{2015}{}
+\cvclub{\href{https://csh.rit.edu/}{Computer Science House}}{System Administrator}{Responsible for administrating CSHs student run server room and all systems in it.}{May 2018 - Present}
+\cvclub{}{Evaluations Director}{Responsible for connecting with the RIT student community, as well as organizing the process of screening, accepting, and welcoming new members.}{June 2018 - Present}
+\cvclub{}{Financial Director}{Responsible for managing finances, collecting semesterly member dues, and hatching new fundraising schemes.}{January 2018 - June 2018}
+\cvclub{}{Insights Director}{Plan and execute a collge overnight program for high school seniors.}{August 2017 - June 2018}
+\cvclub{}{Secretary}{Take notes and record house matters.}{August 2017 - January 2018}
 
