--- a/resume.tex
+++ b/resume.tex
@@ -24,7 +24,7 @@
 
 
 % Change the page layout if you need to
-\geometry{left=1cm,right=9cm,marginparwidth=6.8cm,marginparsep=1.2cm,top=1cm,bottom=1cm}
+\geometry{left=1cm,right=8.8cm,marginparwidth=6.8cm,marginparsep=1cm,top=1cm,bottom=1cm}
 
 % Change the font if you want to.
 \setmainfont{Lato}
@@ -78,31 +78,24 @@
 %% \cvsection title in the "main" bar.
 \cvsection[page1sidebar]{Experience}
 
-\cveventnew{\href{http://datto.com/}{Datto Inc.}}{Software Engineering Intern}{Worked on the Admin Portal Team building the administrative portal for the company. Worked in PHP with Symfony, Javascript, MySQL, Apache, Docker, and Ubuntu.}{May 2018 -- August 2018}{Norwalk, CT}
+\cvexperience{\href{http://datto.com/}{Datto Inc.}}{Software Engineering Intern}{Worked on the Admin Portal Team building the administrative portal for the company. Worked in PHP with Symfony, Javascript, MySQL, Apache, Docker, and Ubuntu.}{May 2018 -- August 2018}{}
 
-\cveventnew{\href{http://zorustech.com/}{Zorus Inc.}}{Software Engineer}{Worked during startup stages as one of three engineers at the company. Built a customer portal and corresponding servers from the ground up. Worked in PHP using Slim, Javascript, Python, NGINX, MySQL and AWS.}{May 2017 -- August 2017}{Newtown, CT}
-
-\cvsection{Education}
-
-\cvevent{Rochester Institute of Technology}{B.S. in Software Engineering}{2016 - 2021}{}
+\cvexperience{\href{http://zorustech.com/}{Zorus Inc.}}{Software Engineer}{Worked during startup stages as one of three engineers at the company. Built a customer portal and corresponding servers from the ground up. Worked in PHP using Slim, Javascript, Python, NGINX, MySQL and AWS.}{May 2017 -- August 2017}
 
 \cvsection{Projects}
 
 \nocite{*}
 
-\cvproject{CSH Packet}{\href{https://github.com/ComputerScienceHouse/packet}{github.com/ComputerScienceHouse/packet}}{Packet is a web application used by Computer Science House to replace a paper signature system used when new members apply. The system keeps track of signatures, allows people to sign packets and calculates progress. Built using Python and Flask, with SQLAlchemy, FreeIPA LDAP and behind OIDC authentication.}
+\cvproject{CSH Packet}{\href{https://github.com/ComputerScienceHouse/packet}{github.com/ComputerScienceHouse/packet}}{Packet is a web application used by Computer Science House to replace a paper signature system used when new members apply. The system keeps track of signatures, allows people to sign packets and calculates progress. Built using Python and Flask, with SQLAlchemy, FreeIPA LDAP and behind OIDC authentication.}{Python}
 
-\divider
+\cvproject{ScheduleMaker}{\href{https://github.com/ComputerScienceHouse/schedulemaker}{github.com/ComputerScienceHouse/schedulemaker}}{Maintain and contribute as the primary maintainer to an Open Source web app used by over 8,000 students each semester at RIT to build their class schedules. Implemented new features and improving the codebase using PHP and Angular.}{PHP}
 
-\cvproject{AWS Wrapper}{\href{https://github.com/SquashProjectTwo/AWS-Wrapper}{github.com/SquashProjectTwo/AWS-Wrapper}}{Created at Brickhack4, a web application that created a new UI interface for AWS, specifically EC2 by using Boto3 to immitate all the functions provided by EC2 in their current web interface. Won best use of AWS at the event.}
+\cvproject{AWS Wrapper}{\href{https://github.com/SquashProjectTwo/AWS-Wrapper}{github.com/SquashProjectTwo/AWS-Wrapper}}{Created at Brickhack4, a web application that created a new UI interface for AWS, specifically EC2 by using Boto3 to immitate all the functions provided by EC2 in their current web interface. Won best use of AWS at the event.}{Python}
 
-\divider
+\cvproject{Contrb}{\href{https://github.com/Contrb}{github.com/Contrb}}{A website built to display coding projects and open source contributions in a visually appealing manor. Built with a React frontend along with a Nodejs and GraphQL backend. The application utilizes GitHub Oauth, GitHub v4 API, with many more integrations planned.}{Javascript}
 
-\cvproject{Contrb}{\href{https://github.com/Contrb}{github.com/Contrb}}{A website built to display coding projects and open source contributions in a visually appealing manor. Built with a React frontend along with a Nodejs and GraphQL backend. The application utilizes GitHub Oauth, GitHub v4 API, with many more integrations planned.}
+\cvproject{wasp}{\href{https://github.com/devinmatte/wasp}{github.com/devinmatte/wasp}}{A command line utility for generating and managing web configuration files. Including the manifest.json, bower.json, package.json and composer.json. Built in Python, and packaged for Linux. Currently managing as a multiple contributor project.}{Python}
 
-\divider
-
-\cvproject{wasp}{\href{https://github.com/devinmatte/wasp}{github.com/devinmatte/wasp}}{A command line utility for generating and managing web configuration files. Including the manifest.json, bower.json, package.json and composer.json. Built in Python, and packaged for Linux. Currently managing as a multiple contributor project.}
 
 % \cvsection{}{Volunteer}
 
